# pogg-semantics

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/pogg_semantics/: pogg_config.py
src/pogg_semantics/my_delphin/: __init__.py  _my_delphin.py  _my_util.py  sementcodecs.py
src/pogg_semantics/semantic_composition/: __init__.py  _call_tracer.py  _semantic_algebra.py  _semantic_composition.py  _sement_util.py  call_tracer.py  semantic_algebra.py  semantic_composition.py  sement_util.py
src/pogg_semantics/semantic_composition/composition_mixins/: base_constructions.py  boolean_constructions.py  heuristic_constructions.py  perplexity_constructions.py  single_word_constructions.py
